# test-ra_delta

./: .dockerignore  .env_example  .env_test  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  docker-compose_test.yml  pyproject.toml  pytest.ini  requirements.txt
src/: config.py  database.py  exceptions.py  main.py
src/api/: __init__.py  dependencies.py  parcels.py  parcels_types.py  tasks.py  web.py
src/migrations/: env.py
src/migrations/versions/: 2025_07_02_0851-6ac2e52648c9_create_all_tables.py  2025_07_04_1245-83c18910865b_create_all_tables.py  2025_07_04_1326-27b66f17f44e_add_delivery_cost.py  2025_07_05_0852-5e2acd2269dc_init.py  2025_07_05_0905-6f97cbc7ca80_default_types.py  2025_07_05_1451-b93712d06ffe_add_transport_company_id.py
src/models/: __init__.py  parcels.py  parcels_types.py  sessions.py
src/repository/: parcels.py  parcels_types.py  utils.py
src/schemas/: parcels.py  parcels_type.py  tasks.py
src/tasks/: __init__.py  celery.py  task_delivery_calc.py  task_exchange.py  taskiq.py
src/templates/: index.html
src/utils/: db_manager.py  exchange_rate.py
tests/: conftest.py
tests/integration_tests/: test_api_parcels.py  test_api_tasks.py  test_api_type.py
tests/unit_tests/: test_calc_cost.py  test_foreign_key.py  test_tasks.py
