[project]
name = "test-ra-delta"
version = "0.1.0"
description = "Test РА Дельта"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiomysql>=0.2.0",
    "alembic>=1.16.2",
    "black>=25.1.0",
    "celery>=5.5.3",
    "fastapi[standard]>=0.115.14",
    "mypy>=1.16.1",
    "pydantic-settings>=2.10.1",
    "redis>=6.2.0",
    "ruff>=0.12.1",
    "sqlalchemy>=2.0.41",
]

[tool.mypy]  
python_version = 3.12
exclude = ['cache','msql_data','venv', '.venv']
plugins = ["pydantic.mypy"]
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
no_implicit_reexport = true
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.ruff]
line-length = 100
