[project]
name = "test-ra-delta"
version = "0.1.0"
description = "Test РА Дельта"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiomysql>=0.2.0",
    "alembic>=1.16.2",
    "black>=25.1.0",
    "cryptography>=45.0.5",
    "fastapi[standard]>=0.115.14",
    "mypy>=1.16.1",
    "pre-commit>=4.2.0",
    "pydantic-settings>=2.10.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
    "pytest-dotenv>=0.5.2",
    "redis>=5.3.0",
    "ruff>=0.12.1",
    "sqlalchemy>=2.0.41",
    "taskiq>=0.11.17",
    "taskiq-aio-pika>=0.4.2",
    "taskiq-fastapi>=0.3.5",
    "taskiq-redis>=1.0.9",
]

[tool.mypy]  
python_version = 3.12
exclude = ['cache','msql_data','venv', '.venv']
plugins = ["pydantic.mypy"]
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
no_implicit_reexport = true
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.ruff]
line-length = 100
