[project]
name = "test-ra-delta"
version = "0.1.0"
description = "Test РА Дельта"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.14",
    "uvicorn>=0.35.0",
    "sqlalchemy>=2.0.41",
    "alembic>=1.16.2",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "aiomysql>=0.2.0",
    "redis>=5.3.0",
    "taskiq>=0.11.17",
    "taskiq-aio-pika>=0.4.2",
    "taskiq-redis>=1.0.9",
    "taskiq-fastapi>=0.3.5",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "jinja2>=3.1.6",
    "cryptography>=45.0.5",
    "httpx>=0.28.1",
]

[tool.mypy]  
python_version = 3.12
exclude = ['cache','msql_data','venv', '.venv']
plugins = ["pydantic.mypy"]
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
no_implicit_reexport = true
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.ruff]
line-length = 100

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-dotenv>=0.5.2",
    "black>=25.1.0",
    "ruff>=0.12.1",
    "mypy>=1.16.1",
    "pre-commit>=4.2.0",
    "pytest-cov>=6.2.1",
]

